--- a/#3/assets/css/styles.css
+++ b/#3/assets/css/styles.css
@@ -66,6 +66,7 @@ main img {
 main h1 {
   color: #fff;
   font-size: 40px;
+  text-align: center;
   font-weight: bold;
   margin-bottom: 16px;
 }
@@ -73,6 +74,7 @@ main h1 {
 main p {
   color: #fff;
   font-size: 18px;
+  text-align: center;
   font-weight: normal;
   margin-bottom: 50px;
 }
@@ -160,5 +162,9 @@ main button:hover a {
 
   header ul li a {
     color: #6a64fc;
+  }
+
+  main img {
+    width: 300px;
   }
 }
